# dfd_gc

./: .gitignore  CMakeLists.txt  README.md
include/: DfD.h  calc_dfd_error.h  support_functions.h
inputs/: dfd_gc_input_cannon.txt  dfd_gc_input_lego1.txt  dfd_gc_input_ps.txt  dfd_maya_points.txt  dfd_mb_sm_all.txt  dfd_mb_sm_all2.txt  dfd_rw_gc_aud2.txt  test_input_file.txt  test_input_file2.txt  test_input_file3.txt  test_input_miya_brick_test.txt  test_input_miya_brick_wall.txt  test_input_miya_room.txt
scripts/: dfd_cpu2.pbs  dfd_cpu2_1.pbs
src/: DfD_Main_v3.cpp  DfD_v3.cpp  map_v5.cpp  readFile.cpp  support_functions_v1.cpp
src/gco-v3.0/: GCoptimization.cpp  example.cpp.txt
